[Fix] Dark mode - Chatbox

--- a/src/styles/components/_chatbox.scss
+++ b/src/styles/components/_chatbox.scss
@@ -162,6 +162,9 @@ body.body--dark {
   .message-box__body {
     background-color: #2e2e2e;
   }
+  .list-users {
+    background-color: #2e2e2e;
+  }
 }
 .call-video {
   position: fixed;
